# researchCrew

./: .env.example  README.md  pyproject.toml  test.html
cookbook/: README.md
docs/: edited_report.md  newsletter.html  research_report.html  research_report.md
logs/: 2024-06-14_20-11-43_edit_task.md  2024-06-14_20-11-43_newsletter_task.html  2024-06-14_20-11-43_research_task.md  2024-06-15_12-42-37_edit_task.md  2024-06-15_12-42-37_newsletter_task.html  2024-06-15_12-42-37_research_task.md  2024-06-15_13-10-17_edit_task.md  2024-06-15_13-10-17_newsletter_task.html  2024-06-15_13-10-17_research_task.md
src/frontend/: app.py
src/newsletter_gen/: crew.py  main.py
src/newsletter_gen/config/: agents.yaml
src/research_crew/: crew.py  main.py
src/research_crew/config/: newsletter_template.html  research_template.html  tasks.yaml
src/research_crew/tools/: research.py  search.py
src/utils/: callback.py
tests/: test_crew_import.py  test_search_tool.py
