[tool.poetry]
name = "newsletter-gen"
version = "0.1.0"
description = ""
authors = ["ibrahimsaidi <ibrahim.aka.ajax@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
newsletter_gen = "newsletter_gen.main:main"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "^0.30.11"
streamlit = "^1.35.0"
crewai-tools = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
