[tool.poetry]
name = "research-crew"
version = "0.1.0"
description = ""
authors = ["ibrahimsaidi <ibrahim.aka.ajax@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
research_crew = "research_crew.main:main"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "^0.30.11"
streamlit = "^1.35.0"
crewai-tools = "^0.2.6"
pytest = "^8.2.1"
exa-py = "^1.0.12"
langchain-anthropic = "0.1.10"  # Compatible version


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
